# CrowForge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  PLAN.md  README.md  TEST_CHECKLIST.md  build.ps1  docker-compose.pocketbase.yml  docker-compose.yml  index.html  package-lock.json  package.json  requirements-server.txt  requirements.txt  start-server.py  vite.config.ts
.claude/: settings.local.json
.claude/commands/: build-release.md
backend/: ai_engine.py  app.py  formula.py  models.py  pocketbase_client.py  prompts.py  schema.sql  storage.py
backend/ai/: agent_loop.py  agent_tools.py  engine_manager.py  plugin_loader.py  rag_engine.py  tool_registry.py  web_tools.py
backend/tests/: test_agent_loop.py  test_engine_manager.py  test_filesystem_tools.py  test_local_engine_detect.py  test_mock_ai_engine.py  test_tool_registry.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
deployment/: README-SERVER.md  crowforge.service  install-linux.sh  install-windows.ps1  synology-setup.md
docs/: ARCHITECTURE.md  INSTALLATION.md  features_gemini.md
installer/: build.ps1  package.json
installer/src/: index.html
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/src/: lib.rs  main.rs
pb_migrations/: 001_initial_schema.py  README.md
plugins/: example_plugin.py
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
(+160 files in other folders)
